--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-kakao-maps-sdk": "^1.1.27",
     "sweetalert2": "^11.12.2",
+    "uuid.v4": "^1.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
