--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "npx supabase gen types typescript --project-id effymfcileeiltsbkxoc --schema public > src/types/supabase.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
